src/routes/styles.css
:root {
  --main-bg-num: 17, 17, 17;
  --main-bg: rgb(var(--main-bg-num));
  --sec-bg: rgb(50, 50, 50);
  --main-border-color: rgb(58, 58, 58);
  --accent-dark: rgb(104, 0, 231);
  --main-border-radius: 12px;
  --accent-num: 125, 20, 255;
  --accent: rgb(var(--accent-num));
  --main-transition: .3s;
  --delete-color-num: 255, 69, 69;
  --delete-color: rgb(var(--delete-color-num));
  --nav-height: 71px;
  --authjs-color-1-num: 204, 66, 229;
  --authjs-color-2-num: 25, 170, 232;
  --sveltekit-color-num: 255, 62, 0;
  --mongodb-color-num: 16, 170, 80;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  color: white;
  background: var(--main-bg);
}

body:has(nav) {
  margin-top: calc(var(--nav-height) / 2);
}

.card {
  padding: 15px;
  border: 1px var(--main-border-color) solid;
  background: var(--sec-bg);
}

button,
.button {
  cursor: pointer;
  text-decoration: none;
  padding: 10px 13px;
  border-radius: var(--main-border-radius);
  transition: var(--main-transition), 0s opacity;
  color: white;
  font-weight: 600;
  font-size: 1rem;
  letter-spacing: 1px;
}

button:active,
.button:active {
  opacity: .7;
}

.primary-button {
  background: var(--accent);
  border: 2px var(--accent-dark) solid;
}

.primary-button:hover {
  box-shadow: 0 0 8px 5px rgba(var(--accent-num), .4);
}

.secondary-button {
  background: rgba(255, 255, 255, 0.1);
  border: 2px transparent solid;
}

.secondary-button:hover {
  background: rgba(255, 255, 255, 0.2);
}

.delete-button {
  background: var(--delete-color);
  border: 2px var(--delete-color) solid;
}

.delete-button:hover {
  box-shadow: 0 0 8px 5px rgba(var(--delete-color-num), .4);
}

.blurry-element {
  transition: var(--main-transition);
}

.blurry-element {
  width: 40%;
  aspect-ratio: 1;
  background: conic-gradient(rgba(var(--authjs-color-1-num), .3),
      rgba(var(--sveltekit-color-num), .3),
      rgba(var(--mongodb-color-num), .3),
      rgba(var(--authjs-color-2-num), .3));
  border-radius: 50%;
  filter: blur(30px);
  animation: blurry-element 10s linear infinite;
}

@keyframes blurry-element {
  50% {
    transform: scale(.7);
    opacity: .7;
  }
}

@media (max-width: 499px) {
  .header-content {
    margin-inline: 20px;
  }

  nav {
    padding-inline: 20px;
  }

  .header-content h1 {
    font-size: 2.3rem;
    line-height: 45px;
    font-weight: 600;
  }
}

@media (min-width: 500px) {
  nav {
    padding-inline: 30px;
  }

  .header-content h1 {
    max-width: 70%;
    font-size: 3rem;
    line-height: 50px;
    font-weight: 800;
  }
}

button:disabled {
  opacity: .6;
  cursor: default;
  pointer-events: none;
}

nav {
  position: fixed;
  top: 0;
  height: var(--nav-height);
  left: 0;
  width: 100%;
  background: rgba(var(--main-bg-num), .5);
  backdrop-filter: blur(12px);
  border-bottom: 1px var(--main-border-color) solid;
  z-index: 999;
}

.nav-buttons button,
.nav-buttons .button {
  height: 42.5px;
}

